--- a/.github/workflows/generate-gallery.yml
+++ b/.github/workflows/generate-gallery.yml
@@ -3,7 +3,7 @@ name: Generate gallery.json
 on:
   push:
     paths:
-      - 'images/**'    # images folder repo root ma che
+      - 'images/**'
 
 jobs:
   generate-json:
@@ -28,11 +28,12 @@ jobs:
         done
         echo "]" >> gallery/gallery.json
     - name: Commit changes
-  run: |
-    git config --local user.email "action@github.com"
-    git config --local user.name "GitHub Action"
-    git add gallery/gallery.json
-    git commit -m "Auto-update gallery.json"
-    git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/india8155/keval-photography.git HEAD:main
-  continue-on-error: true
-
+      env:
+        PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add gallery/gallery.json
+        git commit -m "Auto-update gallery.json"
+        git push https://x-access-token:${PAT_TOKEN}@github.com/india8155/keval-photography.git HEAD:main
+      continue-on-error: true
