--- a/.github/workflows/generate-gallery.yml
+++ b/.github/workflows/generate-gallery.yml
@@ -9,31 +9,44 @@ jobs:
   generate-json:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Generate gallery.json
-      run: |
-        FILES=$(ls images)
-        echo "[" > gallery/gallery.json
-        COUNT=0
-        for FILE in $FILES
-        do
-          if [ $COUNT -gt 0 ]; then echo "," >> gallery/gallery.json; fi
-          echo "  {" >> gallery/gallery.json
-          echo "    \"src\": \"../images/$FILE\"," >> gallery/gallery.json
-          echo "    \"title\": \"Photo $((COUNT+1))\"," >> gallery/gallery.json
-          echo "    \"year\": \"2025\"," >> gallery/gallery.json
-          echo "    \"alt\": \"Photo number $((COUNT+1)) by Keval Kotadia\"" >> gallery/gallery.json
-          echo "  }" >> gallery/gallery.json
-          COUNT=$((COUNT+1))
-        done
-        echo "]" >> gallery/gallery.json
-    - name: Commit changes
-      env:
-        PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add gallery/gallery.json
-        git commit -m "Auto-update gallery.json"
-        git push https://x-access-token:${PAT_TOKEN}@github.com/india8155/keval-photography.git HEAD:main
-      continue-on-error: true
+      - uses: actions/checkout@v3
+
+      - name: Generate gallery.json
+        run: |
+          FILES=$(ls images)
+          echo "[" > gallery/gallery.json
+          COUNT=0
+          for FILE in $FILES
+          do
+            if [ $COUNT -gt 0 ]; then echo "," >> gallery/gallery.json; fi
+            echo "  {" >> gallery/gallery.json
+            echo "    \"src\": \"../images/$FILE\"," >> gallery/gallery.json
+            echo "    \"title\": \"Photo $((COUNT+1))\"," >> gallery/gallery.json
+            echo "    \"year\": \"2025\"," >> gallery/gallery.json
+            echo "    \"alt\": \"Photo number $((COUNT+1)) by Keval Kotadia\"" >> gallery/gallery.json
+            echo "  }" >> gallery/gallery.json
+            COUNT=$((COUNT+1))
+          done
+          echo "]" >> gallery/gallery.json
+
+      - name: Check PAT_TOKEN availability
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          if [ -z "$PAT_TOKEN" ]; then
+            echo "PAT_TOKEN is empty"
+            exit 1
+          else
+            echo "PAT_TOKEN is set"
+          fi
+
+      - name: Commit changes
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add gallery/gallery.json
+          git commit -m "Auto-update gallery.json"
+          git push https://x-access-token:${PAT_TOKEN}@github.com/india8155/keval-photography.git HEAD:main
+        continue-on-error: false
